<resources>
    <string name="app_name">DODA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="choose_image">Choose Image</string>
    <string name="image_name">Image Name</string>
    <string name="close">Close</string>
    <string name="save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="details">Details</string>
</resources>