<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".marker.bottomsheet.MarkerDetailsBottomSheet">

        <EditText
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:minWidth="400dp"
            android:minHeight="48dp"/>

        <EditText
            android:id="@+id/details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_marginTop="8dp"
            android:hint="@string/details"
            android:minWidth="400dp"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_below="@+id/details"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"/>

        <Button
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:layout_below="@+id/details"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:visibility="gone"/>


    </RelativeLayout>
</layout>