<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        tools:context=".dialogs.AddDrawingItemDialog">

        <EditText
            android:id="@+id/inputText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/image_name"
            android:importantForAutofill="no"
            android:minWidth="400dp"
            android:minHeight="48dp"
            android:layout_marginHorizontal="4dp"/>

        <Button
            android:id="@+id/chooseImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/inputText"
            android:layout_marginTop="8dp"
            android:text="@string/choose_image"
            android:textSize="12sp"
            android:layout_centerHorizontal="true"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/chooseImage"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp">

            <Button
                android:id="@+id/close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/close"
                android:textSize="12sp" />

            <Button
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textSize="12sp" />

        </LinearLayout>
    </RelativeLayout>
</layout>